[package]
name = "chat-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "*"
tokio = { version="1.47.1", features=["full"]}
maud = {version="*", features=["axum"]}
tower-http = {version="*", features=["fs"]}
tower-cookies = "0.11.0"
serde = {version="1", features=["derive"]}
axum-extra = {version = "0.10", features=["cookie"]}
sqlx = {version="0.8", features=["runtime-tokio", "sqlite"]}
uuid = {version="1.18", features=["v4"]}
